@@ -67,8 +67,7 @@ class Yylex {
 
     private static int[] zzUnpackAction() {
         int[] result = new int[45];
-        int offset = 0;
-        offset = zzUnpackAction(ZZ_ACTION_PACKED_0, offset, result);
+        zzUnpackAction(ZZ_ACTION_PACKED_0, 0, result);
         return result;
     }
 
@@ -79,9 +78,9 @@ class Yylex {
         while (i < l) {
             int count = packed.charAt(i++);
             int value = packed.charAt(i++);
-            do
+            do {
                 result[j++] = value;
-            while (--count > 0);
+            } while (--count > 0);
         }
         return j;
     }
@@ -99,8 +98,7 @@ class Yylex {
 
     private static int[] zzUnpackRowMap() {
         int[] result = new int[45];
-        int offset = 0;
-        offset = zzUnpackRowMap(ZZ_ROWMAP_PACKED_0, offset, result);
+        zzUnpackRowMap(ZZ_ROWMAP_PACKED_0, 0, result);
         return result;
     }
 
@@ -164,8 +162,7 @@ class Yylex {
 
     private static int[] zzUnpackAttribute() {
         int[] result = new int[45];
-        int offset = 0;
-        offset = zzUnpackAttribute(ZZ_ATTRIBUTE_PACKED_0, offset, result);
+        zzUnpackAttribute(ZZ_ATTRIBUTE_PACKED_0, 0, result);
         return result;
     }
 
@@ -176,9 +173,9 @@ class Yylex {
         while (i < l) {
             int count = packed.charAt(i++);
             int value = packed.charAt(i++);
-            do
+            do {
                 result[j++] = value;
-            while (--count > 0);
+            } while (--count > 0);
         }
         return j;
     }
@@ -262,9 +259,9 @@ class Yylex {
         while (i < 90) {
             int count = packed.charAt(i++);
             char value = packed.charAt(i++);
-            do
+            do {
                 map[j++] = value;
-            while (--count > 0);
+            } while (--count > 0);
         }
         return map;
     }
@@ -328,8 +325,9 @@ class Yylex {
         zzAtEOF = true; /* indicate end of file */
         zzEndRead = zzStartRead; /* invalidate buffer */
 
-        if (zzReader != null)
+        if (zzReader != null) {
             zzReader.close();
+        }
     }
 
     /**
@@ -433,8 +431,9 @@ class Yylex {
      *            not be greater than yylength()!
      */
     public void yypushback(int number) {
-        if (number > yylength())
+        if (number > yylength()) {
             zzScanError(ZZ_PUSHBACK_2BIG);
+        }
 
         zzMarkedPos -= number;
     }
@@ -476,9 +475,9 @@ class Yylex {
             zzForAction: {
                 while (true) {
 
-                    if (zzCurrentPosL < zzEndReadL)
+                    if (zzCurrentPosL < zzEndReadL) {
                         zzInput = zzBufferL[zzCurrentPosL++];
-                    else if (zzAtEOF) {
+                    } else if (zzAtEOF) {
                         zzInput = YYEOF;
                         break zzForAction;
                     } else {
@@ -499,16 +498,18 @@ class Yylex {
                         }
                     }
                     int zzNext = zzTransL[zzRowMapL[zzState] + zzCMapL[zzInput]];
-                    if (zzNext == -1)
+                    if (zzNext == -1) {
                         break zzForAction;
+                    }
                     zzState = zzNext;
 
                     int zzAttributes = zzAttrL[zzState];
                     if ((zzAttributes & 1) == 1) {
                         zzAction = zzState;
                         zzMarkedPosL = zzCurrentPosL;
-                        if ((zzAttributes & 8) == 8)
+                        if ((zzAttributes & 8) == 8) {
                             break zzForAction;
+                        }
                     }
 
                 }
@@ -568,7 +569,8 @@ class Yylex {
             case 33:
                 break;
             case 1: {
-                throw new JSONParseException(yychar, JSONParseException.ERROR_UNEXPECTED_CHAR, new Character(yycharat(0)));
+                throw new JSONParseException(yychar, JSONParseException.ERROR_UNEXPECTED_CHAR,
+                        Character.valueOf(yycharat(0)));
             }
             case 34:
                 break;
